--- a/doc/obsidian-documentation-0.1.tex
+++ b/doc/obsidian-documentation-0.1.tex
@@ -68,7 +68,27 @@ So with obisidan, The more nodes you haves, the more efficient it is compared to
 
 \section{Global Architecture}
 
-This section explains 
+This section explains how Obsidian works from a global point of vew:\\\\
+
+Obsidian nodes are logically grouped by what we call 'Spheres of influence'. Each Obsidian node inside a sphere of influance receive the same announces, 
+and all the nodes will end-up hosting the same files database (except if you defined filters, later explained in this document)
+ 
+2 distinct spheres of Influence appear when nobody belonging to sphere 1 has a peering connection to anybody Belonging to sphere 2   
+
+\begin{center}
+\includegraphics[scale=1]{../resources/images/global_arch_1.png}
+\end{center}
+Now let's make the model evolve. Node 2 from sphere 1 peers with node 2 from sphere 2: Since These 2 nodes will share announces, the 2 spheres will merge. 
+
+\begin{center}
+\includegraphics[scale=1]{../resources/images/global_arch_2.png}
+\end{center}
+
+$
+n1 \epsilon S1 \\
+n2 \epsilon S2 \\
+peering(n1,n2) =>  n1 \epsilon (S1 \cap S2) , n2 \epsilon (S1 \cap S2)\\\\$
+
 
 
 \section{Software Architecture}
