--- a/TODO
+++ b/TODO
@@ -1,9 +1,10 @@
 TODO LOW_PRIO
 Implement zlib support to enable gziped data transfers between nodes.
 Support of dirtee synchronization instead of single directory (depth 1)
+Implement filters
 
 TODO HIGH_PRIO
 Implement Locks on sockets/ hashqueues announces flushing
 Implemment logging function
-Implement filters
+Implment public dexp nodes
 
