--- a/TODO
+++ b/TODO
@@ -7,4 +7,5 @@ TODO HIGH_PRIO
 Implemment logging function
 Clean up the Install mess (finish the Makefile install process, find a way to change defines at configure time, to handle location prefixes )
 Finish Documentation
+Implement file Mods through xdelta algorithm
 
